@@ -112,6 +112,8 @@ private:
 	void PrepareToStop() throw();
 	void StorePacket();
 
+	uint8_t	GetRequestContactCount() const throw();
+
 	bool		m_stopping;
 	time_t		m_created;
 	uint32_t	m_type;
